feat: add sorting support to api_keys_list
